style: fixed form overflow

--- a/src/Components/PostForm/postForm.css
+++ b/src/Components/PostForm/postForm.css
@@ -1,7 +1,7 @@
 .edit-post {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   width: 100wh;
 
   align-items: center;
